--- a/src/app/topic/components/topic-milestones/topic-milestones.component.scss
+++ b/src/app/topic/components/topic-milestones/topic-milestones.component.scss
@@ -168,6 +168,7 @@
       justify-content: flex-end;
       align-items: center;
       position: relative;
+      gap: 16px;
       width: 100%;
       height: 56px;
 
