--- a/src/app/public-topics/components/topicbox/topicbox.component.html
+++ b/src/app/public-topics/components/topicbox/topicbox.component.html
@@ -25,8 +25,10 @@
       <div class="header_content">
         <ng-container *ngIf="topic.status==='draft'">
           <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
-            <path d="M8.8143 4.18517L11.8147 7.18569L5.29947 13.7012L2.62438 13.9965C2.26626 14.0361 1.96369 13.7333 2.00354 13.3752L2.30118 10.6981L8.8143 4.18517ZM13.6704 3.73845L12.2616 2.3296C11.8222 1.89013 11.1095 1.89013 10.67 2.3296L9.34467 3.65501L12.3451 6.65553L13.6704 5.33011C14.1099 4.89042 14.1099 4.17791 13.6704 3.73845Z" fill="#2C3B47"/>
-            </svg>
+            <path
+              d="M8.8143 4.18517L11.8147 7.18569L5.29947 13.7012L2.62438 13.9965C2.26626 14.0361 1.96369 13.7333 2.00354 13.3752L2.30118 10.6981L8.8143 4.18517ZM13.6704 3.73845L12.2616 2.3296C11.8222 1.89013 11.1095 1.89013 10.67 2.3296L9.34467 3.65501L12.3451 6.65553L13.6704 5.33011C14.1099 4.89042 14.1099 4.17791 13.6704 3.73845Z"
+              fill="#2C3B47" />
+          </svg>
           <div class="bold" translate="COMPONENTS.TOPICBOX.HEADER_DRAFT"
             [translateParams]="{value: topic.comments?.count || 0}"></div>
         </ng-container>
@@ -60,8 +62,10 @@
               d="M9.26218 5.01961L9.06663 4H4.66663V12.6667H5.6444V9.09804H8.38218L8.57774 10.1176H12V5.01961H9.26218Z"
               fill="#DA7AB1" />
           </svg>
-          <div class="bold" translate="COMPONENTS.TOPICBOX.HEADER_FOLLOW_UP"
-            [translateParams]="{value: (milestones$ | async)?.length}"></div>
+          <ng-container *ngIf="milestones$ | async as milestones">
+            <div class="bold" translate="COMPONENTS.TOPICBOX.HEADER_FOLLOW_UP"
+              [translateParams]="{value: milestones?.length}"></div>
+          </ng-container>
         </ng-container>
         <ng-container *ngIf="topic.status==='closed'">
           <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
