--- a/src/app/ideation/components/topic-ideation/topic-ideation.component.html
+++ b/src/app/ideation/components/topic-ideation/topic-ideation.component.html
@@ -41,13 +41,27 @@
           </button>
           <div class="options">
             <ng-container *ngIf="canEditDeadline()">
-              <div class="option" (click)="editDeadline()">
+              <a class="option" [routerLink]="['/', translate.currentLang, 'topics', 'ideation', 'edit', topic.id]"
+                fragment="ideation_system">
                 <div class="icon_wrap">
                   <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path
                       d="M8.8143 4.18517L11.8147 7.18569L5.29947 13.7012L2.62438 13.9965C2.26626 14.0361 1.96369 13.7333 2.00354 13.3752L2.30118 10.6981L8.8143 4.18517ZM13.6704 3.73845L12.2616 2.3296C11.8222 1.89013 11.1095 1.89013 10.67 2.3296L9.34467 3.65501L12.3451 6.65553L13.6704 5.33011C14.1099 4.89042 14.1099 4.17791 13.6704 3.73845Z"
                       fill="#2C3B47" />
                   </svg>
+                </div>
+                <span translate="COMPONENTS.TOPIC_IDEATION.OPT_EDIT_IDEATION"></span>
+              </a>
+            </ng-container>
+            <ng-container *ngIf="canEditDeadline()">
+              <div class="option" (click)="editDeadline()">
+                <div class="icon_wrap">
+                  <svg width="16" height="16" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path fill-rule="evenodd" clip-rule="evenodd"
+                      d="M8 2C7.44772 2 7 2.44772 7 3V4H6C4.89543 4 4 4.89543 4 6V18C4 19.1046 4.89543 20 6 20H18C19.1046 20 20 19.1046 20 18V6C20 4.89543 19.1046 4 18 4H17V3C17 2.44772 16.5523 2 16 2C15.4477 2 15 2.44772 15 3V4H9V3C9 2.44772 8.55228 2 8 2ZM6 8H18V18H6V8ZM9 6V5H7V6H9ZM17 5V6H15V5H17ZM11.0332 9.55428C11.0152 9.25392 11.2438 9 11.5322 9H12.4678C12.7562 9 12.9848 9.25392 12.9668 9.55428L12.5293 13.5108C12.5128 13.7858 12.2943 14 12.0303 14H11.9697C11.7057 14 11.4872 13.7858 11.4707 13.5108L11.0332 9.55428ZM13 15.9565C13 16.5328 12.5523 17 12 17C11.4477 17 11 16.5328 11 15.9565C11 15.3802 11.4477 14.913 12 14.913C12.5523 14.913 13 15.3802 13 15.9565Z"
+                      fill="#2C3B47" />
+                  </svg>
+
                 </div>
                 <span *ngIf="!ideation.deadline" translate="COMPONENTS.TOPIC_IDEATION.OPT_ADD_DEADLINE"></span>
                 <span *ngIf="ideation.deadline" translate="COMPONENTS.TOPIC_IDEATION.OPT_EDIT_DEADLINE"></span>
